--- a/style.css
+++ b/style.css
@@ -1,40 +1,30 @@
-html,
-body {
-	background: white;
-}
-
 html {
 	height: 100%;
+	font-size: 18px;
 }
 
 body {
 	color: black;
 	font-family: "Inconsolata", monospace;
-	font-size: 1.2rem;
-	font-weight: 300;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+		"Segoe UI Symbol";
+	font-size: 1rem;
+	font-weight: 400;
 	line-height: 1.3;
 	margin: 0;
 	min-height: 100%;
 }
 
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin-top: 3rem;
-}
-
-hr {
-	margin: 2rem 0;
-}
-
 p {
 	margin: 1rem 0;
+	line-height: 1.6em;
+	color: #343434;
 }
 
-li {
-	margin: 0.4rem 0;
+p:first-of-type {
+	margin-top: 0;
+	margin-bottom: 2rem;
 }
 
 .w {
@@ -44,18 +34,91 @@ li {
 	padding: 4rem 2rem;
 }
 
-hr {
-	text-align: center;
-	border: 0;
-}
-
-code {
-	color: white;
-	background: black;
+header {
+	display: flex;
+	flex-direction: column-reverse;
 }
 
 img {
 	max-width: 100%;
 	display: block;
 	margin: 0 auto;
+}
+
+.notion-page-title + picture img {
+	width: 140px;
+	height: 140px;
+	max-width: 50vw;
+	max-height: 50vw;
+	border-radius: 50%;
+	margin-left: 0;
+	margin-right: auto;
+	margin-bottom: 1rem;
+}
+
+.notion-page-title + picture + figcaption {
+	display: none;
+}
+
+.notion-checkbox {
+	margin-top: 0.6em;
+	padding-left: 1.6em;
+	position: relative;
+	color: #343434;
+}
+
+.notion-checkbox.checked {
+	text-decoration: line-through;
+	opacity: 0.4;
+}
+
+.notion-checkbox::before {
+	content: "";
+	height: 0.8em;
+	width: 0.8em;
+	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3Z' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+	background-size: contain;
+	z-index: 1;
+	position: absolute;
+	top: 0.3em;
+	left: 0;
+	transform-origin: top;
+	opacity: 0.8;
+}
+
+.notion-checkbox.checked::before {
+	background-image: url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.39551 11.8989L12.3955 14.8989L22.3955 4.89893' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M21.3955 12.8989V19.8989C21.3955 20.4294 21.1848 20.9381 20.8097 21.3131C20.4346 21.6882 19.9259 21.8989 19.3955 21.8989H5.39551C4.86507 21.8989 4.35637 21.6882 3.98129 21.3131C3.60622 20.9381 3.39551 20.4294 3.39551 19.8989V5.89893C3.39551 5.36849 3.60622 4.85978 3.98129 4.48471C4.35637 4.10964 4.86507 3.89893 5.39551 3.89893H16.3955' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");
+}
+
+ul {
+	list-style-type: none;
+	margin: 0.6em;
+	font-size: 0.8em;
+	color: #aaaaaa;
+}
+
+ul > li {
+	position: relative;
+}
+
+ul > li::before {
+	content: "";
+	height: 0.8em;
+	width: 0.8em;
+	background-image: url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.96 10.1704L20.96 15.1704L15.96 20.1704' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M4.95996 4.17041V11.1704C4.95996 12.2313 5.38139 13.2487 6.13153 13.9988C6.88168 14.749 7.89909 15.1704 8.95996 15.1704H20.96' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+	position: absolute;
+	background-size: contain;
+	z-index: 1;
+	position: absolute;
+	top: 0.3em;
+	left: -1em;
+	transform-origin: top;
+	opacity: 0.4;
+}
+
+h2,
+h3,
+h4 {
+	margin-top: 2em;
+	margin-bottom: 0.6em;
 }
