--- a/style.css
+++ b/style.css
@@ -152,9 +152,10 @@ h4 {
 }
 
 hr {
-	border-width: 1px;
+	border: none;
 	opacity: 0.2;
-	border-color: black;
+	border-bottom: 2px black solid;
+	border-radius: 1px;
 	margin: 3rem auto 3rem;
 }
 
