--- a/style.css
+++ b/style.css
@@ -14,16 +14,17 @@ body {
 	line-height: 1.3;
 	margin: 0;
 	min-height: 100%;
+	background: #f9f9f9;
 }
 
 p {
 	margin: 1rem 0;
 	line-height: 1.6em;
-	color: #343434;
+	color: #555555;
 }
 
 ol {
-	color: #343434;
+	color: #555555;
 	list-style-position: outside;
 	padding-left: 1.4em;
 	margin: 0;
@@ -73,7 +74,7 @@ img {
 	margin-top: 0.6em;
 	padding-left: 1.6em;
 	position: relative;
-	color: #343434;
+	color: #555555;
 }
 
 .notion-checkbox.checked {
@@ -175,4 +176,13 @@ a:hover {
 	background-size: auto 4px;
 	background-repeat: repeat-x;
 	text-decoration: none;
+}
+
+img.emoji {
+	display: inline-block;
+	height: 1.2em;
+	width: 1.2em;
+	margin: 0 0.05em 0 0.1em;
+	vertical-align: -0.1em;
+	filter: brightness(0.95);
 }
